--- a/Chapter_4_LLM_APIs_for_Various_Large_Language_Model_Tasks.ipynb
+++ b/Chapter_4_LLM_APIs_for_Various_Large_Language_Model_Tasks.ipynb
@@ -2260,7 +2260,7 @@
         "\n",
         "openai.api_key = os.getenv(\"OPENAI_API_KEY\")  # Setting the OpenAI API key by accessing the environment variable OPENAI_API_KEY\n",
         "\n",
-        "audio_file = open(\"german.m4a\", \"rb\")  # Opening the audio file in binary mode\n",
+        "audio_file = open(./data/\"german.mp3\", \"rb\")  # Opening the audio file in binary mode\n",
         "\n",
         "transcript = openai.Audio.translate(\"whisper-1\", audio_file)  # Calling the translate method of the Audio class to translate the audio file\n"
       ],
