--- a/Chapter_4_LLM_APIs_for_Various_Large_Language_Model_Tasks.ipynb
+++ b/Chapter_4_LLM_APIs_for_Various_Large_Language_Model_Tasks.ipynb
@@ -147,19 +147,19 @@
         "        },\n",
         "        \"Automatic Speech Recognition\": {\n",
         "            \"API_URL\": \"https://api-inference.huggingface.co/models/facebook/wav2vec2-base-960h\",\n",
-        "            \"payload\": \"/content/harvard.wav\"\n",
+        "            \"payload\": \"/data/harvard.wav\"\n",
         "        },\n",
         "        \"Audio Classification\": {\n",
         "            \"API_URL\": \"https://api-inference.huggingface.co/models/superb/hubert-large-superb-er\",\n",
-        "            \"payload\": \"/content/sample1.flac\"\n",
+        "            \"payload\": \"/data/sample1.flac\"\n",
         "        },\n",
         "        \"Image Classification\": {\n",
         "            \"API_URL\": \"https://api-inference.huggingface.co/models/google/vit-base-patch16-224\",\n",
-        "            \"payload\": \"/content/trees.jpg\"\n",
+        "            \"payload\": \"/data/trees.jpg\"\n",
         "        },\n",
         "        \"Object Detection\": {\n",
         "            \"API_URL\": \"https://api-inference.huggingface.co/models/facebook/detr-resnet-50\",\n",
-        "            \"payload\": \"/content/multiple_objects.jpg\"\n",
+        "            \"payload\": \"/data/multiple_objects.jpg\"\n",
         "        }\n",
         "    }\n",
         "    # Check if the selected task is valid\n",
