--- a/Chapter_4_LLM_APIs_for_Various_Large_Language_Model_Tasks.ipynb
+++ b/Chapter_4_LLM_APIs_for_Various_Large_Language_Model_Tasks.ipynb
@@ -2615,7 +2615,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Co.Rerank"
+        "##Co.Detokenize"
       ],
       "metadata": {
         "id": "qLFnjjI_Brrg"
@@ -2655,7 +2655,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Co.Rerank"
+        "##Co.Detect_Language"
       ],
       "metadata": {
         "id": "nSkiKywEBn_H"
@@ -2704,7 +2704,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Co.Rerank"
+        "##Co.Summarize"
       ],
       "metadata": {
         "id": "wev5CUvbBjnL"
