Update Chapter 6 - Movie_Recommendation.ipynb

--- a/Chapter 6 - Movie_Recommendation.ipynb
+++ b/Chapter 6 - Movie_Recommendation.ipynb
@@ -107,13 +107,13 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Archive:  /content/archive.zip\n",
+            "Archive:  /data/IMDb_Data_final.zip\n",
             "  inflating: IMDb_Data_final.csv     \n"
           ]
         }
       ],
       "source": [
-        "!unzip /content/archive.zip"
+        "!unzip /data/IMDb_Data_final.zip"
       ]
     },
     {
